--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 #mc_embed_signup input.button {
-  width: 25%;
+  width: auto;
   height: 46px;
   background: #FFDA6C;
   font-family: inherit;
@@ -117,7 +117,7 @@
   cursor: pointer;
   transition: background .3s ease-in-out;
 display: inline-block;
-margin:0;
+margin:0 auto;
 clear:none;
 }
 #mc_embed_signup .button:hover {
@@ -125,7 +125,7 @@ clear:none;
 }
 #mc_embed_signup{
   text-align: center;
-  min-width:250px;
+  min-width:400px;;
 }
 #mc_embed_signup input.email{
   width: 75%;
@@ -138,7 +138,7 @@ clear:none;
   height: 46px;
   display: inline-block;
   float: left;
-  margin:0;
+  margin:0 auto;
   clear:none;
   outline: 1px solid #FFDA6C;
 }
@@ -153,6 +153,7 @@ input:focus {
   padding:0;
   margin:0 auto;
   align-items: center;
+  text-align:center;
   width:50%;
 }
 #mc_embed_signup form {
