--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                       <br>
                       Programming is art.  Output is not the only canvas of expression.
                       <br>
-                      Programming is fun.  Stop learning, start playing.
+                      Programming is fun.  Start playing.
                     </p>
                   </div>
                 </div>
