--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 <div class="row stuff" style="display:none;">
                   <div class="col-md-12">
-                    <p>Sign up with your email to find out when codeslams are here.  If you are interested in making code fun, email me <a href="mailto:geo@codeslam.io>geo@codeslam.io</a></p>
+                    <p>Sign up with your email to find out when codeslams are here.  If you are interested in making code fun, email me <a href="mailto:geo@codeslam.io">geo@codeslam.io</a></p>
                     <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
