--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ $('.navbar-collapse ul li a').click(function() {
 });
 
 var CodeSlam = function() {
-  console.log("top animation modifed from d3.js blocks: http://bl.ocks.org/mbostock/1021103,http://bl.ocks.org/mbostock/1020902, http://bl.ocks.org/mbostock/3081153")
+  console.log("top animation modifed from d3.js blocks\nhttp://bl.ocks.org/mbostock/1021103\nhttp://bl.ocks.org/mbostock/1020902\nhttp://bl.ocks.org/mbostock/3081153")
   //console.log("codeslam functions", ["main", "log"])
 }
 
