--- a/crash.html
+++ b/crash.html
@@ -125,7 +125,7 @@
 				<button class="btn btn-lg runit">event-details.js</button>
 <textarea id="code">
 event = {}
-event.title = 'Computer Science 101 Crash Course'
+event.title = 'codeslam CS Crash Course'
 event.location = 'Domi Station'
 event.start = new Date('January 14, 2016')
 event.end = new Date('February 25, 2016')
