--- a/crash.html
+++ b/crash.html
@@ -100,7 +100,7 @@
 				</span>
 				<h2><em>an introduction to Computer Science in 2 months</em></h2>
 				<h3 class="topics codefont">topics = ["Computational thinking",
-					"Problem solving","Basic programming", "Data structures", "Data manipulation", "Conditionals", "Control flow", "Functions", "Symbolic representation", "Memory", "Algorithms", "Computational cost"]</h3>
+					"Problem solving","Programming languages", "Data structures", "Data manipulation", "Conditionals", "Control flow", "Functions", "Symbolic representation", "Memory", "Algorithms", "Computational cost"]</h3>
 
 				<p>If you do not know what the topics above are (or have a hard time reading it), and you are ready to learn a lot in a short time, this class is for you!</p>
 				<ul>
