--- a/crash.html
+++ b/crash.html
@@ -162,7 +162,7 @@ Object.keys(event).forEach(function(k){
 			<div class="row">
 				<div class="col-md-3">
 					<h3>MATERIALS</h3>
-					<p>are provided free by:</p>
+					<p>are provided by:</p>
 					<ul>
 						<li>Udacity's <a href="https://www.udacity.com/course/intro-to-computer-science--cs101" target="_blank">Intro to Computer Science</a> course*.  The materials are designed for 3 months @ 6 hours/week.  With the help of codeslam, you will complete these materials in 2 months, and learn more in the process.</p>
 						<li>codeslam free course materials and tools</li>
