--- a/crash.html
+++ b/crash.html
@@ -173,7 +173,7 @@ Object.keys(event).forEach(function(k){
 				<div class="col-md-3">
 					<h3>YOU</h3>
 					<p>already know that computer science is important in today's world and want to learn it.</p>
-					<p>You will watch online videos and complete online quizzes prior to class meetings.</p>
+					<p>You will need to watch online videos and complete online quizzes prior to class meetings.</p>
 					<p>You will need to bring a laptop with a web browser installed to class.</p>
 				</div>
 				<div class="col-md-3">
