--- a/crash.html
+++ b/crash.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>CodeSlam CS Crash Course</title>
-
+		<!-- binary thing credit: http://codepen.io/mattfinch/pen/aLwEb -->
 		<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +18,20 @@
 		<link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
 
 		<style>
+		.bin {
+		  font-size:1.25em;
+		  width: 100%;
+			height: 150px;
+			border-radius: 50px;
+			background: inherit;
+			color: rgba(255,255,255,0.8);
+			margin: 0 auto;
+			font-family: monospace;
+			word-wrap: break-word;
+		 	line-height: 0.8em;
+			overflow: hidden;
+			float:right;
+		}
 
 		html, body {
     	height:100%;
@@ -93,7 +107,9 @@
     </nav>
 
 		<div class="fullscreen content-a" >
+
 			<div class="header jumbotron content-b">
+				<p class="bin"><p>
 				<span class="codefont">
 				<h1>codeslam's</h1>
 				<h2>Computer Science Crash Course</h2>
@@ -270,6 +286,26 @@ Object.keys(event).forEach(function(k){
 		    }
 		  })
 		})
+
+		$(document).ready(function(){
+		  generateBinary();
+			setInterval('updateBinary()', 0);
+		});
+
+		function generateBinary(){
+		  str = "";
+		  for ( var i = 0; i < 3500; i++ ) {
+		    str = str + Math.round(Math.random());
+		  }
+		  $(".bin").html(str);
+		}
+
+		function updateBinary() {
+		  str = $(".bin").html();
+		  n = str.length;
+		  r = Math.floor(Math.random() * n + 1)
+		  $(".bin").html(str.substring(0, r) + Math.round(Math.random()) + str.substring(r + 1));
+		}
 
 	</script>
 	</body>
