--- a/crash.html
+++ b/crash.html
@@ -36,6 +36,20 @@
 		html, body {
     	height:100%;
 		}
+		.jumbotron a {
+		    color: #F2FF00;
+		    -webkit-transition: all .2s ease-in-out;
+		    -moz-transition: all .2s ease-in-out;
+		    transition: all .2s ease-in-out;
+		}
+
+		.jumbotron a:hover,
+		.jumbotron a:focus {
+		    text-decoration: none;
+		    color: #ee0;
+		}
+
+
 			.codefont {
 				font-family: 'Source Code Pro';
 			}
