--- a/crash.html
+++ b/crash.html
@@ -10,7 +10,9 @@
 		<script src = "https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.9.0/mode/javascript/javascript.min.js"></script>
 		<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
+		<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 		<script src = "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 
 		<link href = "https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.9.0/codemirror.min.css" type='text/css' rel="stylesheet">
 		<link href = "https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.9.0/theme/mdn-like.min.css" type='text/css' rel="stylesheet">
@@ -96,6 +98,9 @@
 			}
 			.section{
 				padding:5%;
+			}
+			.header {
+				margin-top:-120px;
 			}
 		</style>
 	</head>
@@ -304,6 +309,9 @@ Object.keys(event).forEach(function(k){
 		})
 
 		$(document).ready(function(){
+			d3.select('.bin').style({'background-color':'#000'}).transition().duration(3000)
+			.ease("bounce").style({'background-color':'#6ad'})
+
 		  generateBinary();
 			setInterval('generateBinary()', 500);
 		});
