--- a/crash.html
+++ b/crash.html
@@ -24,7 +24,7 @@
 		  font-size:1.25em;
 		  width: 100%;
 			height: 150px;
-			border-radius: 60px;
+			border-radius: 5px;
 			background: inherit;
 			color: rgba(255,255,255,0.8);
 			margin: 0 auto;
@@ -32,6 +32,8 @@
 			word-wrap: break-word;
 		 	line-height: 0.8em;
 			overflow: hidden;
+			padding-left:12px;
+			padding-right:10px;
 		}
 
 		html, body {
